# gcp-sandbox-provisioner-backend

./: .gitignore  Dockerfile  PRD.md  README.md  architecture.excalidraw  env.sample  main.py  performance_test.py  pyproject.toml  requirements.txt
.roo/: mcp.json
app/: main.py
app/api/v1/endpoints/: aws.py  azure.py  gcp.py  health.py
app/core/: app_factory.py  config.py  mcp.py  router.py
app/models/: gcp_base_models.py
app/services/: gcp_sandbox.py
app/templates/: index.html
app/utils/: logger.py  logging_utils.py  utils.py
