[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.29.0",
    "email-validator>=2.1.0",
    "google-cloud-resource-manager>=1.0.0",
    "google-cloud-billing>=1.0.0",
    "google-cloud-tasks>=2.0.0",
    "google-cloud-run>=0.10.0",
    "google-cloud-iam>=1.0.0",
    "fastmcp>=2.5.1",
    "fastapi-mcp>=0.3.4",
]
